modificaciones ej15